--- a/style.css
+++ b/style.css
@@ -8,11 +8,31 @@
 }
 
 body {
-    background: lightblue;
+    background: rgb(0, 54, 72);
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    background: linear-gradient(70deg, rgba(0, 0, 0, 0.58) 35%, rgba(0, 0, 0, 0.5861695019804797) 47%), linear-gradient(180deg, rgba(0, 0, 0, 0.3) 96%, rgba(0, 0, 0, 1) 100%), url(images/bg2.jpg);
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed !important;
+    background-repeat: no-repeat;
+    height: 100%;
+}
+
+section {
+    padding: 60px 8% 90px;
+}
+
+.center-text {
+    text-align: center;
+    font-size: 4vw;
+    color: #fff;
+}
+
+.center-text span {
+    color: #03a9f4;
 }
 
 .container {
@@ -26,6 +46,112 @@ body {
     display: grid;
     grid-template-columns: 1fr 2fr;
     box-shadow: 0 35px 55px rgba(0, 0, 0, 0.1);
+    overflow-x: hidden !important;
+}
+
+.container .menu {
+    position: absolute;
+    top: 25%;
+    left: 200vw;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 20px;
+    cursor: pointer;
+    z-index: 100;
+}
+
+.bars {
+    z-index: 10;
+    font-size: 2rem;
+    position: absolute;
+    top: 10%;
+    right: 17%;
+    color: #03a9f4;
+}
+
+.container .menu nav {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #000;
+    width: 100%;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 111;
+}
+
+.menu nav ul {
+    list-style: none;
+}
+
+.menu nav ul li {
+    margin: 50px 0;
+}
+
+.menu nav ul li a {
+    color: #fafafa;
+    text-decoration: none;
+    font-size: 2em;
+    font-weight: 500;
+    position: relative;
+    opacity: 0;
+}
+
+.menu nav ul li a:after {
+    content: '';
+    width: 100%;
+    position: absolute;
+    height: 3px;
+    border-radius: 5px;
+    background: #fff;
+    bottom: -10px;
+    left: 0;
+    transform-origin: left;
+    transition: transform .5s ease;
+    transform: scaleX(0);
+}
+
+.menu nav ul li a:hover:after {
+    transform: scaleX(1);
+}
+
+.menu nav .close {
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: 25%;
+    right: 5%;
+    cursor: pointer;
+    opacity: 0;
+}
+
+.menu nav .close div::before,
+.menu nav .close div::after {
+    content: '';
+    position: absolute;
+    width: 30px;
+    height: 4px;
+    background: #fff;
+    transition: background .5s ease;
+}
+
+.menu nav .close div::before {
+    transform: rotate(-45deg);
+}
+
+.menu nav .close div::after {
+    transform: rotate(45deg);
+}
+
+.menu nav h2 {
+    position: absolute;
+    top: 24%;
+    left: 5%;
+    color: #fff;
+    opacity: 0;
 }
 
 .container .left_side {
@@ -245,6 +371,115 @@ body {
 
 
 
+/* Fullscreen modal */
+.video-modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 1000;
+    justify-content: center;
+    align-items: center;
+}
+
+.video-modal video {
+    max-width: 90%;
+    max-height: 90%;
+    border-radius: 10px;
+}
+
+.portfolio-content {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, auto));
+    align-items: center;
+    gap: 2.3rem;
+    margin-top: 4.2rem;
+}
+
+.portfolio .logo i {
+    font-size: 4rem;
+    color: #923ADB;
+    transition: .6s ease-in-out;
+    opacity: 1;
+    transform: translateX(0px);
+}
+
+.portfolio .logo i:hover {
+    color: #fff;
+}
+
+.portfolio-content .row {
+    background: #2d343f;
+    border-radius: 28px;
+    border: 1px solid transparent;
+    box-shadow: 0 0 5px #03a9f4;
+    padding: 20px;
+    transition: all .50s ease;
+    overflow-x: hidden !important;
+}
+
+.portfolio-content .row video {
+    height: auto;
+    width: 100%;
+    border-radius: 28px;
+    margin-bottom: 1.4rem;
+}
+
+.portfolio-content .row .main-row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 0.5rem;
+}
+
+.row .main-row .row-text h5{
+    font-size: 20px;
+    font-weight: 600;
+    color: #848c90;
+}
+
+.row .main-row .row-icon i {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 55px;
+    height: 55px;
+    font-size: 27px;
+    border-radius: 50%;
+    color: #f0f0f0;
+    background: #03a9f4;
+}
+
+.row h4 {
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
+    line-height: 1.4;
+    color: #fff;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media (max-width: 1000px) {
     .container {
         margin: 10px;
@@ -264,6 +499,9 @@ body {
 }
 
 @media (max-width: 600px) {
+    section {
+        padding: 50px 15% 10px;
+    }
     .about .box {
         flex-direction: column;
     }
@@ -278,5 +516,17 @@ body {
     }
     .container .right_side {
         padding: 10px;
+    }
+    .portfolio {
+        overflow-x: hidden !important;
+    }
+    .menu nav ul {
+        margin-bottom: rem;
+    }
+    .menu nav .close {
+        top: 5%;
+    }
+    .menu nav h2 {
+        top: 5%;
     }
 }
