--- a/style.css
+++ b/style.css
@@ -521,7 +521,7 @@ section {
         overflow-x: hidden !important;
     }
     .menu nav ul {
-        margin-bottom: rem;
+        margin-bottom: 34rem;
     }
     .menu nav .close {
         top: 5%;
